Flusspferd Change Log
=====================

Release ?.?
-----------

2009-09-19:
- Overhauled SQLite3 module.

Release 0.8
-----------

2009-09-19:
- Immature plugins have been removed (and moved into feature branch).
- Added lastInsertID to SQLite3

2009-09-10:
- Added bash_completion script for flusspferd.

Release 0.7
-----------

2009-08-31:
- Use new getopt API for parsing interpreter / shell arguments.
- Add platform and xFlusspferdVersion constants to system module.

2009-07-30:
- Add (core) "getopt" plugin and C++ API.

2009-07-19:
- Remove environment plugin. Env variables are now only available via
  require('system').env (CommonJS compatability).

2009-07-04:
- Emacs mode is installed (again) and byte compiled if emacs is found.
- Line editors (libedit / readline / none) can now be selected via the cmake
  LINE_EDITOR option (also, similar to FORCE_PLUGINS, there is now
  FORCE_LINE_EDITOR).

2009-06-22:
- IO.stdin/stdout/stderr removed in favor of the same in the 'system' module.

2009-06-20:
- Added optional GNU/readline support (useful due to bugs in libedit).
- Added --no-global-history command line switch for deactivating the permanent
  history.
- Added --history-file command line switch for setting the history file.

2009-06-19:
- Add -I command line switch for specifying module paths.
- Add -M command line switch for loading modules (with 'require').
- Add permanent history to the shell.
- Add CommonJS 'system' module (https://wiki.mozilla.org/ServerJS/System).

2009-06-18:
- Remove Blob and use Binary everywhere.
- Adapted (method/class) names that contained Blob to use Binary instead.
- Eliminate the IO and XML global variables.

2009-06-12:
- Lower-case module names for included modules (it remains case-sensitive).
- FLUSSPFERD_LOADER gets passed the context object as its second parameter.
- Split FLUSSPFERD_LOADER into FLUSSPFERD_LOADER (2 parameters) and
  FLUSSPFERD_LOADER_SIMPLE (1 parameter).

Release 0.6.1
-------------

2009-06-13: