@@ -13,6 +13,8 @@ Release 0.8
 2009-09-19:
 - Immature plugins have been removed (and moved into feature branch).
 - Added lastInsertID to SQLite3
+- Added tail to SQLite3.Cursor
+- Removed the tail part from the sql property of SQLite3.Cursor
 
 2009-09-10:
 - Added bash_completion script for flusspferd.
